--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
     }
 
     header {
-      background: url('https://images.unsplash.com/photo-1607623814075-e51df1e2d35b?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+      background: url('https://cdn.pixabay.com/photo/2017/05/11/19/25/truck-2307330_1280.jpg') center/cover no-repeat;
       padding: 120px 20px 60px;
-      color: white;
+      color: #fff;
       text-align: center;
     }
 
     header h1 {
       font-size: 42px;
       margin-bottom: 10px;
+      color: #ffffff;
     }
 
     header p {
       font-size: 18px;
-      color: #f0f0f0;
+      color: #fefefe;
     }
 
     nav {
