--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     header {
-      background: url('https://cdn.pixabay.com/photo/2017/05/11/19/25/truck-2307330_1280.jpg') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://cdn.pixabay.com/photo/2017/05/11/19/25/truck-2307330_1280.jpg') center/cover no-repeat;
       padding: 120px 20px 60px;
       color: #fff;
       text-align: center;
@@ -29,6 +29,21 @@
     header p {
       font-size: 18px;
       color: #fefefe;
+      margin-bottom: 20px;
+    }
+
+    .cta-button {
+      background-color: #ffcc00;
+      color: #1d1d1d;
+      padding: 14px 28px;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 10px;
     }
 
     nav {
@@ -88,6 +103,7 @@
   <header>
     <h1>Truck Driver Transportation L.L.C</h1>
     <p>Driven by Reliability – Based in Fort Valley, Georgia</p>
+    <a href="#contact" class="cta-button">Get a Free Quote</a>
   </header>
 
   <nav>
